# arbitrary_quote_generatorer

./: .flake8  README.md  pyproject.toml
docs/: conf.py  index.rst
tests/: test_get_quote.py
