[tool.poetry]
name = "arbitrary-quote-generator-7019"
version = "0.1.0"
description = ""
authors = ["Kumar K N <kumarkn001@gmail.com>"]

[tool.poetry.dependencies]
python = "3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
